k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
      - name: python-api-container
        image: python-api:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
