k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-service
spec:
  type: ClusterIP
  selector:
    app: python-api
  ports:
    - port: 5000
      targetPort: 5000
